-*- coding: utf-8; fill-column: 68 -*-


=======
CHANGES
=======
0.5.0rc5
========
- bugfixes, behavioral changes
- orm
    - Query.select_from(), from_statement() ensure
      that the given argument is a FromClause,
      or Text/Select/Union, respectively.

    - Duplicate items in a list-based collection will
      be maintained when issuing INSERTs to
      a "secondary" table in a many-to-many relation.
      Assuming the m2m table has a unique or primary key 
      constraint on it, this will raise the expected 
      constraint violation instead of silently
      dropping the duplicate entries. Note that the 
      old behavior remains for a one-to-many relation
      since collection entries in that case
      don't result in INSERT statements and SQLA doesn't
      manually police collections. [ticket:1232]
      
    - Query.add_column() can accept FromClause objects
      in the same manner as session.query() can.

    - Comparison of many-to-one relation to NULL is
      properly converted to IS NOT NULL based on not_().
     
    - Extra checks added to ensure explicit 
      primaryjoin/secondaryjoin are ClauseElement 
      instances, to prevent more confusing errors later 
      on.

    - Improved mapper() check for non-class classes.
      [ticket:1236]
    
    - comparator_factory argument is now documented
      and supported by all MapperProperty types,
      including column_property(), relation(), 
      backref(), and synonym() [ticket:5051].
      
    - Changed the name of PropertyLoader to
      RelationProperty, to be consistent
      with all the other names.  PropertyLoader is 
      still present as a synonym.
    
    - fixed "double iter()" call causing bus errors
      in shard API, removed errant result.close()
      left over from the 0.4 version. [ticket:1099]
      [ticket:1228]

    - made Session.merge cascades not trigger autoflush.
      Fixes merged instances getting prematurely inserted
      with missing values.
      